[gd_scene load_steps=6 format=3 uid="uid://c2xd0kjhsgfkx"]

[ext_resource type="Shader" uid="uid://ck48osohs7wu0" path="res://assest/shader/icon_color.tres" id="1_k0p6w"]
[ext_resource type="Script" path="res://src/ui/MainSideButton.gd" id="1_wumye"]
[ext_resource type="Texture2D" uid="uid://cwp0q44pb5140" path="res://assest/icon/ui/gamepad.svg" id="2_5lmmn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1mp8"]
resource_local_to_scene = true
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b4p3u"]
resource_local_to_scene = true
shader = ExtResource("1_k0p6w")
shader_parameter/tint_color = Color(0.47451, 0.505882, 0.54902, 1)

[node name="MainSideButton" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
theme_override_styles/panel = SubResource("StyleBoxFlat_l1mp8")
script = ExtResource("1_wumye")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
modulate = Color(0.0823529, 0.129412, 0.184314, 1)
material = SubResource("ShaderMaterial_b4p3u")
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("2_5lmmn")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.47451, 0.505882, 0.54902, 1)
text = "Engine"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
